--- a/package.json
+++ b/package.json
@@ -1,34 +1,56 @@
 {
   "name": "nazrars.github.io",
   "version": "2.0.0",
+  "private": true,
   "description": "CV of Andreas Lindberg",
-  "browser": "docs/index.html",
-  "scripts": {
-    "prestart": "cpy node_modules/@fortawesome/fontawesome-pro/webfonts/*.* src/webfonts",
-    "start": "parcel src/index.html --no-cache",
-    "prebuild": "npm run prestart",
-    "build": "parcel build src/index.html --public-url ./ --no-cache",
-    "predeploy": "rimraf dist && npm run build",
-    "deploy": "gh-pages -d dist -b master"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nazrars/nazrars.github.io.git"
-  },
   "author": "Andreas Lindberg <nazrars@gmail.com>",
-  "license": "ISC",
+  "scripts": {
+    "build": "parcel build src/index.html --public-url ./ --no-cache",
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist -b master",
+    "generate": "graphql-codegen --config codegen.yml --require dotenv/config",
+    "prebuild": "npm run prestart",
+    "predeploy": "rimraf dist && npm run build",
+    "prestart": "cpy node_modules/@fortawesome/fontawesome-pro/webfonts/*.* src/webfonts",
+    "start": "parcel src/index.html --no-cache"
+  },
+  "browser": "docs/index.html",
+  "dependencies": {},
+  "devDependencies": {
+    "@fortawesome/fontawesome-pro": "5.14.0",
+    "@graphql-codegen/cli": "1.17.6",
+    "@graphql-codegen/fragment-matcher": "1.17.6",
+    "@graphql-codegen/introspection": "1.17.6",
+    "@graphql-codegen/typescript": "1.17.6",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.17.6",
+    "@graphql-codegen/typescript-operations": "1.17.6",
+    "@graphql-codegen/typescript-type-graphql": "1.17.6",
+    "@vue/babel-preset-app": "^4.4.6",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-service": "4.4.6",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "core-js": "^3.6.5",
+    "dotenv": "8.2.0",
+    "eslint": "7.5.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
+    "fibers": "5.0.0",
+    "graphql": "15.3.0",
+    "prettier": "2.0.5",
+    "prettier-eslint": "11.0.0",
+    "sass": "1.26.10",
+    "typescript": "3.9.7",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.3"
+  },
   "bugs": {
     "url": "https://github.com/nazrars/nazrars.github.io/issues"
   },
   "homepage": "https://nazrars.github.io",
-  "dependencies": {},
-  "devDependencies": {
-    "@fortawesome/fontawesome-pro": "^5.11.2",
-    "cpy-cli": "^2.0.0",
-    "gh-pages": "^2.1.1",
-    "parcel-bundler": "^1.12.4",
-    "rimraf": "^3.0.0",
-    "sass": "^1.23.0",
-    "typescript": "^3.7.2"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nazrars/nazrars.github.io.git"
   }
 }
